--- a/whatsaap.html
+++ b/whatsaap.html
@@ -5,7 +5,7 @@
    <body>
 <div class="flex-container">
   <div class="flex-item1">
-<a href="whatsapp.html"><img src="123.svg" width="250px"></a>
+<a href="whatsapp.html"><img src="123.svg" width="150px"></a>
   </div>
  <div class="flex-item2">
   <ul class="div1">
@@ -17,42 +17,45 @@
   </ul>
 </div>
 </div>
-<br><br><br><br>
+<br><br><br><br><br><br>
 <div class="flex-containerA">
   <div class="flex-item3">
-    <br><br>
+    <br><br><br><br><br><br>
 <h2>Simple. Secure.<br>
 Reliable messaging.</h2>
-<p>With WhatsApp, you'll get fast, simple, secure messaging<br>
-  and calling for free*, available on phones all over the world</p>
+<p7>With WhatsApp, you'll get fast, simple, secure messaging<br>
+  and calling for free*, available on phones all over the world</p7>
+  <br><br>
+<font size ="2px"><p8>* Data charges may apply. Contact your provider for details.</p8></font><br>
+<br><br><br><br>
 <ul class="intro">
-  <li><a herf="android"><img src="icon-android.svg"><span>Android</span></a></li>
-  <li><a href="iphone"><img src="icon-iphone.svg">iphone</a></li>
-  <li><a href="mac or window pc"><img src="icon-desktop.svg">mac or window pc</a></li>
-  <li><a href="windows phone"><img src="icon-wp.svg">windows phone</a></li>
+  <li><a herf="Android"class="class1"><img src="icon-android.svg" class="bottom">Android</a></li>
+  <li><a href="iphone" class="class1"><img src="icon-iphone.svg" class="bottom">iphone</a></li>
+  <li><a href="mac or window pc"class="class1"><img src="icon-desktop.svg" class="bottom">mac or window pc</a></li>
+  <li><a href="windows phone"class="class1"><img src="icon-wp.svg" class="bottom">windows phone</a></li>
 </ul>
 </div>
 <div class"flex-item4">
-  <img src="home-phone-mobile.png" alt="whatsapp photo" width="300px">
+  <img src="home-phone-mobile.png" alt="whatsapp photo" width="350px">
 </div>
 </div>
 <div class="flex-containerB">
   <div class="flex-item5">
-  <center><p>WHATSAPP VOICE AND VIDEO CALLS</p></center>
+  <center><p class="class2">WHATSAPP VOICE AND VIDEO CALLS</p></center>
   <center><h2>Speak Freely</h2></center>
-  <p>With voice calls, you can talk to your friends and family for free*, even if <br>
+  <p><With voice calls, you can talk to your friends and family for free*, even if <br>
     they're in another country. And with free* video calls, you can have face-to-<br>
   voice and video calls use your phone's Internet connection, instead of your <br>
     cell plan's voice minutes, so you don't have to worry about expensive calling charges.</p>
 
-    <img src="feature-3.png" alt="whatsapp photo" width="530px">
+    <img src="feature-3.png" alt="whatsapp photo" width="550px">
 </div>
 
     <div class="flex-item6">
 
-      <img src="unnamed.png" alt="whatsapp photo" width="250">
+      <center><img src="Screen Shot 2016-11-25 at 7.56.51 PM.png" alt="whatsapp photo" width="250"></center>
 <br><br>
-  <center><p>END-TO-END ENCRYPTION</p></center>
+  <center><p class="class2">END-TO-END ENCRYPTION</p></center>
   <center><h2>Security by Default</h2></center>
   <p>Some of your most personal moments are shared on WhatsApp, which is why<br>
      we built end-to-end encryption into the latest versions of our app. When<br>
@@ -109,6 +112,15 @@ Reliable messaging.</h2>
     </ul>
   </div>
 </div>
+  <div class="flex-container20">
+     <div class="flex-itemA">
+       2016 © WhatsApp Inc.
+     </div>
+    <div class="flex-itemB">
+      Privacy & Terms
+    </div>
+  </div>
+
 
   </body>
   </html>
