--- a/whatsaap.html
+++ b/whatsaap.html
@@ -1,11 +1,14 @@
+<!doctype html>
 <html>
-   <head>
+<head>
+      <meta charset="utf-8">
+      <title>whatsapp.html</title>
       <link rel="stylesheet" href="kavay.css">
-   </head>
-   <body>
+</head>
+<body>
 <div class="flex-container">
   <div class="flex-item1">
-<a href="whatsapp.html"><img src="123.svg" width="150px"></a>
+<a href="whatsapp.html"><img src="123.svg" alt="whatsapp logo" width="150"></a>
   </div>
  <div class="flex-item2">
   <ul class="div1">
@@ -20,44 +23,44 @@
 <br><br><br><br><br><br>
 <div class="flex-containerA">
   <div class="flex-item3">
-    <br><br><br><br><br><br>
-<h2>Simple. Secure.<br>
-Reliable messaging.</h2>
-<p7>With WhatsApp, you'll get fast, simple, secure messaging<br>
-  and calling for free*, available on phones all over the world</p7>
-  <br><br>
-<font size ="2px"><p8>* Data charges may apply. Contact your provider for details.</p8></font><br>
-<br><br><br><br>
+    <br><br>
+<h1 class="intro">Simple. Secure.<br>
+Reliable messaging.</h1>
+<div class="class13"><p>With WhatsApp, you'll get fast, simple, secure messaging<br>
+  and calling for free*, available on phones all over the world</p></div>
+
+<div class="class12"><p>*Data charges may apply. Contact your provider for details.</p><br></div>
+<br>
 <ul class="intro">
-  <li><a herf="Android"class="class1"><img src="icon-android.svg" class="bottom">Android</a></li>
-  <li><a href="iphone" class="class1"><img src="icon-iphone.svg" class="bottom">iphone</a></li>
-  <li><a href="mac or window pc"class="class1"><img src="icon-desktop.svg" class="bottom">mac or window pc</a></li>
-  <li><a href="windows phone"class="class1"><img src="icon-wp.svg" class="bottom">windows phone</a></li>
+  <li><a href="Android" class="class1"><img src="icon-android.svg" alt="android logo" class="bottom">Android</a></li>
+  <li><a href="iphone" class="class1"><img src="icon-iphone.svg" alt="iphone logo" class="bottom">iphone</a></li>
+  <li><a href="macorwindowpc" class="class1"><img src="icon-desktop.svg" alt="desktop logo" class="bottom">mac or window pc</a></li>
+  <li><a href="windowsphone" class="class1"><img src="icon-wp.svg" alt="window logo" class="bottom">windows phone</a></li>
 </ul>
 </div>
-<div class"flex-item4">
-  <img src="home-phone-mobile.png" alt="whatsapp photo" width="350px">
+<div class="flex-item4">
+  <img src="home-phone-mobile.png" alt="whatsapp photo" width="350">
 </div>
 </div>
 <div class="flex-containerB">
   <div class="flex-item5">
-  <center><p class="class2">WHATSAPP VOICE AND VIDEO CALLS</p></center>
-  <center><h2>Speak Freely</h2></center>
-  <p><With voice calls, you can talk to your friends and family for free*, even if <br>
+  <p class="class2">WHATSAPP VOICE AND VIDEO CALLS</p>
+  <h2>Speak Freely</h2>
+  <p>With voice calls, you can talk to your friends and family for free, even if <br>
     they're in another country. And with free* video calls, you can have face-to-<br>
   voice and video calls use your phone's Internet connection, instead of your <br>
     cell plan's voice minutes, so you don't have to worry about expensive calling charges.</p>
 
-    <img src="feature-3.png" alt="whatsapp photo" width="550px">
+    <img src="feature-3.png" alt="whatsapp photo" width="550">
 </div>
 
     <div class="flex-item6">
 
-      <center><img src="Screen Shot 2016-11-25 at 7.56.51 PM.png" alt="whatsapp photo" width="250"></center>
-<br><br>
-  <center><p class="class2">END-TO-END ENCRYPTION</p></center>
-  <center><h2>Security by Default</h2></center>
-  <p>Some of your most personal moments are shared on WhatsApp, which is why<br>
+      <div class=class11><img src="Screen.png" alt="whatsapp photo" width="250"></div>
+
+  <p class="class3">END-TO-END ENCRYPTION</p>
+  <h2>Security by Default</h2>
+  <p class="in">Some of your most personal moments are shared on WhatsApp, which is why<br>
      we built end-to-end encryption into the latest versions of our app. When<br>
      end-to-end encrypted, your messages and calls are secured so only you and<br>
      the person you're communicating with can read or listen to them, and<br>
@@ -65,12 +68,12 @@ Reliable messaging.</h2>
 </div>
 </div>
 <br><br>
- <center><h3>EXPLORE FEATURE</h3></center>
+ <h3>EXPLORE FEATURE</h3>
  <br><br>
   <div class="flex-container-ul-bottom">
     <div class="flex-item first-colum">
 
-  <p1>WHATSAPP</p1>
+  <B>WHATSAPP</B>
 
     <ul class="intro1">
       <li><a href="#">Features</a></li>
@@ -82,7 +85,7 @@ Reliable messaging.</h2>
   </div>
 
   <div class="flex-item second-colum">
-  <p1>COMPANY</p1>
+  <B>COMPANY</B>
    <ul class="intro1">
      <li><a href="#">About</a></li>
      <li><a href="#">careers</a></li>
@@ -93,7 +96,7 @@ Reliable messaging.</h2>
 </div>
 
   <div class="flex-item third-colum">
-  <p1>DOWNLOAD</p1>
+  <B>DOWNLOAD</B>
     <ul class="intro1">
       <li><a href="#">Mac/pc</a></li>
       <li><a href="#">Android</a></li>
@@ -104,7 +107,7 @@ Reliable messaging.</h2>
 </ul>
 </div>
   <div class="flex-item fourth-colum">
-  <p1>HELP</p1>
+  <B>HELP</B>
     <ul class="intro1">
       <li><a href="#">FAQ</a></li>
       <li><a href="#">twitter</a></li>
